Prueba que no falla

--- a/BACK/src/public/index.html
+++ b/BACK/src/public/index.html
@@ -4,8 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hola</title>
+    <style>
+        body {
+            background-color: #f4f1de; /* Color crema suave de fondo */
+            color: #333; /* Color de texto oscuro para contraste */
+            font-family: 'Arial', sans-serif; /* Fuente sencilla y legible */
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+        }
+        h1 {
+            background-color: #e07a5f; /* Fondo crema más oscuro para el título */
+            color: #fff; /* Color blanco para el texto del título */
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Sombra suave para dar profundidad */
+            text-align: center;
+        }
+    </style>
 </head>
 <body>
-    <h1>Hola</h1>
+    <h1>API</h1>
 </body>
 </html>
